# pytest-broadcaster

./: .gitignore  README.md  _version.py  generate-json-schemas.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  demo.yml  docs.yml  pypi.yml
demo-project/: .prettierrc.mjs  astro.config.mjs  package-lock.json  package.json  vitest.workspace
docs/: SUMMARY.md  index.md
docs/recipes/: code_generation.md
docs/schemas/: collect_report.json  error_message.json  location.json  outcome.json  session_event.json  session_finish.json  session_result.json  session_start.json  test_case.json  test_case_call.json  test_case_error.json  test_case_finished.json  test_case_report.json  test_case_setup.json  test_case_teardown.json  test_directory.json  test_module.json  test_suite.json  traceback.json  warning_message.json
schemas/: collect_report.json  discovery_event.json  discovery_result.json  error_message.json  location.json  outcome.json  session_finish.json  session_start.json  test_case.json  test_case_call.json  test_case_error.json  test_case_finished.json  test_case_outcome.json  test_case_report.json  test_case_setup.json  test_case_teardown.json  test_directory.json  test_item.json  test_module.json  test_suite.json  traceback.json  warning_message.json
scripts/: deploy-docs.sh  generate-documentation.py  generate_reference.py
src/pytest_discover/: __about__.py  __init__.py  _fields.py  _utils.py  hook_spec.py  interfaces.py  plugin.py
src/schemas/: collect_report.json  discovery_event.json  discovery_result.json  error_message.json  location.json  outcome.json  session_finish.json  session_result.json  session_start.json  test_case.json  test_case_call.json  test_case_error.json  test_case_finished.json  test_case_outcome.json  test_case_report.json  test_case_setup.json  test_case_teardown.json  test_directory.json  test_item.json  test_module.json  test_suite.json  traceback.json  warning_message.json
tests/: _utils.py  conftest.py  test_basic.py  test_basic_marker.py  test_basic_parametrization.py  test_basic_suite.py  test_basics.py  test_errors.py  test_errors_third_party.py  test_multi_cases.py  test_multi_files.py  test_multi_suite.py  test_nested_directories.py  test_nested_markers.py  test_simple_marker.py  test_simple_parametrize.py  test_something.py  test_version.py  test_warnings.py  test_warnings_third_party.py
tests/call/: _utils.py  test_basic.py  test_basic_failure.py  test_basic_skip.py  test_basic_xfail.py  test_skip_within_test.py  test_xfail_within_test.py
tests/collect/: _utils.py  test_basic.py  test_basic_marker.py  test_basic_parametrization.py  test_basic_suite.py  test_errors.py  test_errors_third_party.py  test_multi_cases.py  test_multi_files.py  test_multi_suite.py  test_nested_directories.py  test_nested_markers.py  test_warnings.py  test_warnings_third_party.py
tests/destination/: test_http_webhook.py
tests/fake-lib/: README.md
tests/fake_lib/: pyproject.toml
v0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.0/LICENSE/: index.html
v0.10.0/SUMMARY/: index.html
v0.10.0/reference/: index.html
v0.10.0/schemas/: collect_report.json  error_message.json  index.html  location.json  outcome.json  project.json  python_distribution.json  session_end.json  session_event.json  session_result.json  session_start.json  test_case.json  test_case_call.json  test_case_end.json  test_case_error.json  test_case_report.json  test_case_setup.json  test_case_teardown.json  test_directory.json  test_module.json  test_suite.json  traceback.json  warning_message.json
v0.10.0/search/: search_index.json
v0.10.0/why/: index.html
v0.11.0/: 404.html  index.html  sitemap.xml
v0.11.0/LICENSE/: index.html
v0.11.0/SUMMARY/: index.html
v0.11.0/reference/: index.html
v0.11.0/schemas/: collect_report.json  error_message.json  index.html  location.json  outcome.json  project.json  python_distribution.json  session_end.json  session_event.json  session_result.json  session_start.json  test_case.json  test_case_call.json  test_case_end.json  test_case_error.json  test_case_report.json  test_case_setup.json  test_case_teardown.json  test_directory.json  test_module.json  test_suite.json  traceback.json  (+1 more)
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.5.0/: 404.html  index.html  sitemap.xml
v0.6.0/: 404.html  index.html  sitemap.xml
v0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
(+579 files in other folders)
