[project]
name = "pytest-discover"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Guillaume Charbonnier", email = "guillaume.charbonnier@araymond.com" }
]
dependencies = [
    "pytest",
    "typing-extensions",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.entry-points.pytest11]
pytest_discover = "pytest_discover.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "datamodel-code-generator>=0.25.5",
    "pyright>=1.1.355",
]

[tool.rye.scripts]
bootstrap = { cmd = "rye sync --no-lock" }
generate-schemas = { cmd = "python generate-json-schemas.py" }
generate-models = { chain = ["_generate-models", "_format-models", "generate-schemas"] }
verify-models = { chain = ["_generate-models-check", "_format-models-check", "_generate-models-diff"] }
# Internal tasks
_generate-models = { cmd = "datamodel-codegen --input src/schemas/ --output src/pytest_discover/models --input-file-type jsonschema --disable-timestamp --output-model-type=dataclasses.dataclass --use-field-description --use-schema-description" }
_format-models = { cmd = "rye fmt src/pytest_discover/models" }
_generate-models-check = { cmd = "datamodel-codegen --input src/schemas/ --output check --input-file-type jsonschema --disable-timestamp --output-model-type=dataclasses.dataclass --use-field-description --use-schema-description" }
_format-models-check = { cmd = "rye fmt check" }
_generate-models-diff = { cmd = "diff --exclude __pycache__ -r src/pytest_discover/models check" }

[tool.pyright]
pythonVersion = "3.8"
include = ["tests", "src"]
strict = ["src"]
exclude = ["**/.venv", "**/node_modules", "**/__pycache__", ".git", "**/build"]
venv = ".venv"
venvPath = "."
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_discover"]
